2000-03-01  Federico Mena Quintero  <federico@helixcode.com>

	At this point the calendar client and personal calendar server
	files were moved to the idl/, cal-client/, and pcs/ directories.

	* idl/Makefile.am: New file.

	* cal-client/Makefile.am: New file.  Moved the libcal-client stuff
	from calendar/Makefile.am to here.

	* pcs/Makefile.am: New file.  Moved the tlacuache stuff from
	calendar/Makefile.am to here.

	* Makefile.am (SUBDIRS): Added the idl and cal-client directories.

2000-03-01  Federico Mena Quintero  <federico@helixcode.com>

	* Makefile.am: Use the gnome-config flags for orbit-idl.  
	Create a libcal-client library with the calendar client object.

2000-02-29  Federico Mena Quintero  <federico@helixcode.com>

	* Makefile.am: Removed stale rule for the conduit.

2000-02-21  Matt Loper  <matt@helixcode.com>

	* .cvsignore: Added *.lo.

2000-02-19  Matt Loper  <matt@helixcode.com>

	* .cvsignore: Added tlacuache and tl-test.

2000-02-18  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* Makefile.am (INCLUDES): Use BONOBO_VFS_GNOME_CFLAGS instead of
	GNOMEUI_INCLUDES, as we use Bonobo and VFS.

2000-02-17  Seth Alves  <alves@hungry.com>

	* cal-backend.h: moved CalendarFormat type def here

	* cal-backend.c (cal_backend_load): if extension suggests
	an ical file, attempt to load an iCal file.
	(cal_get_type_from_filename): returns CAL_ICAL if file
	extension is 'ics' or 'ifb', else returns CAL_VCAL
	(icalendar_calendar_load): moved this here from
	icalendar.c because it needs to call the static function
	add_object.

2000-02-17  Federico Mena Quintero  <federico@helixcode.com>

	* cal-client.c (cal_client_remove_object): Implemented.

	* cal.c (cal_notify_remove): Implemented.
	(Cal_remove_object): Implemented.
	(cal_get_epv): Fill in the remove_object field in the epv.

	* cal-backend.c (cal_backend_remove_object): Implemented.
	(notify_remove): New function to notify clients that an object was
	removed.
